--- a/css_fundamentals/code_magazine/style.css
+++ b/css_fundamentals/code_magazine/style.css
@@ -80,3 +80,52 @@ aside {
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
 }
+
+/* .first-li {
+  font-weight: bold;
+} */
+
+li:first-child {
+  font-weight: bold;
+}
+
+li:last-child {
+  font-style: italic;
+}
+
+/* li:nth-child(3) {
+  color: red;
+} */
+
+/* li:nth-child(even) {
+  color: red;
+} */
+
+/*Misconception: this won't work */
+article p:first-child {
+  color: red;
+}
+
+/* The order of how you declare you a pseudo classes matter */
+
+/* Styling links */
+a:link {
+  color: #1098ad;
+  text-decoration: none;
+}
+
+a:visited {
+  /* color: #777; */
+  color: #1098ad;
+}
+
+a:hover {
+  color: orangered;
+  font-weight: bold;
+  text-decoration: underline orangered;
+}
+
+a:active {
+  background-color: black;
+  font-style: italic;
+}
