covered dealing with conflicting selectors and selector priority

--- a/css_fundamentals/code_magazine/style.css
+++ b/css_fundamentals/code_magazine/style.css
@@ -49,9 +49,44 @@ li {
   font-style: italic;
 } */
 
-#author {
+/* Resolving conflicting declarations
+In order of highest to lowest prioriety:
+Declarations marked with !important
+Inline style
+ID Selectors
+Class or pseudo-class selectors
+Element selectors
+Universal selector
+
+In the below code,
+the id will be applied
+because that has higher
+priorty 
+
+In the case of selectors
+with the same priority,
+the selector that appears
+last in the code gets
+applied
+*/
+
+/* footer p {
+  color: green !important;
+} */
+
+#author-text {
+  font-style: italic;
+  font-size: 20px;
+}
+.author {
   font-style: italic;
   font-size: 18px;
+}
+p,
+li {
+  font-family: sans-serif;
+  color: #444;
+  font-size: 22px;
 }
 
 #copy {
