completed inheritance section and refactored store page with css

--- a/css_fundamentals/code_magazine/style.css
+++ b/css_fundamentals/code_magazine/style.css
@@ -1,10 +1,12 @@
-h1,
-h2,
-h3,
-h4,
-p,
-li {
+* {
+  /* border-top: 10px solid #1098ad; */
+}
+
+body {
+  color: #444;
+  font-size: 16px;
   font-family: sans-serif;
+  border-top: 10px solid #1098ad;
 }
 
 h1,
@@ -163,4 +165,8 @@ a:hover {
 a:active {
   background-color: black;
   font-style: italic;
+}
+
+nav {
+  font-size: 18px;
 }
