--- a/css_fundamentals/code_magazine/style.css
+++ b/css_fundamentals/code_magazine/style.css
@@ -1,12 +1,45 @@
 * {
   /* border-top: 10px solid #1098ad; */
+  margin: 0;
+  padding: 0;
 }
 
 body {
   color: #444;
-  font-size: 16px;
   font-family: sans-serif;
   border-top: 10px solid #1098ad;
+}
+
+.main-header {
+  background-color: #f7f7f7;
+  /* padding: 20px;
+  padding-left: 40px;
+  padding-right: 40px; */
+  padding: 20px 40px;
+  margin-bottom: 60px;
+  height: 80px;
+}
+
+nav {
+  font-size: 18px;
+}
+
+article {
+  margin-bottom: 60px;
+}
+
+.post-header {
+  margin-bottom: 40px;
+}
+
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+  /* padding-top: 50px;
+  padding-bottom: 50px; */
+  padding: 50px 0;
+  width: 500px;
 }
 
 h1,
@@ -23,10 +56,13 @@ h1 {
 
 h2 {
   font-size: 40px;
+  margin-bottom: 30px;
 }
 
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 
 h4 {
@@ -37,10 +73,20 @@ h4 {
 p {
   font-size: 22px;
   line-height: 1.5;
+  margin-bottom: 15px;
 }
 
+ul,
+ol {
+  margin-left: 50px;
+}
 li {
   font-size: 20px;
+  margin-bottom: 10px;
+}
+
+li:last-child {
+  margin-bottom: 0;
 }
 
 /* footer p {
@@ -50,27 +96,6 @@ li {
 /* article header p {
   font-style: italic;
 } */
-
-/* Resolving conflicting declarations
-In order of highest to lowest prioriety:
-Declarations marked with !important
-Inline style
-ID Selectors
-Class or pseudo-class selectors
-Element selectors
-Universal selector
-
-In the below code,
-the id will be applied
-because that has higher
-priorty 
-
-In the case of selectors
-with the same priority,
-the selector that appears
-last in the code gets
-applied
-*/
 
 /* footer p {
   color: green !important;
@@ -106,16 +131,6 @@ ul {
 
 .related {
   list-style: none;
-}
-
-.main-header {
-  background-color: #f7f7f7;
-}
-
-aside {
-  background-color: #f7f7f7;
-  border-top: 5px solid #1098ad;
-  border-bottom: 5px solid #1098ad;
 }
 
 /* .first-li {
@@ -167,6 +182,10 @@ a:active {
   font-style: italic;
 }
 
-nav {
-  font-size: 18px;
+.post-img {
+  width: 100%;
+  /* width: 800px; */
+  /*height: auto is only neccessary if we have already
+   defined a height previously*/
+  height: auto;
 }
