--- a/css_fundamentals/code_magazine/style.css
+++ b/css_fundamentals/code_magazine/style.css
@@ -4,10 +4,18 @@
   padding: 0;
 }
 
+/* Page sections */
 body {
   color: #444;
   font-family: sans-serif;
   border-top: 10px solid #1098ad;
+}
+
+.container {
+  width: 700px;
+  /* margin-left: auto;
+  margin-right: auto; */
+  margin: 0 auto;
 }
 
 .main-header {
@@ -17,7 +25,7 @@ body {
   padding-right: 40px; */
   padding: 20px 40px;
   margin-bottom: 60px;
-  height: 80px;
+  /* height: 80px; */
 }
 
 nav {
@@ -27,7 +35,6 @@ nav {
 article {
   margin-bottom: 60px;
 }
-
 .post-header {
   margin-bottom: 40px;
 }
@@ -42,6 +49,7 @@ aside {
   width: 500px;
 }
 
+/* Smaller elements */
 h1,
 h2,
 h3 {
@@ -188,4 +196,18 @@ a:active {
   /*height: auto is only neccessary if we have already
    defined a height previously*/
   height: auto;
+}
+
+nav a:link {
+  /* background-color: orangered;
+  margin: 20px;
+  padding: 20px;
+  display: block; */
+  margin-right: 30px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
 }
