--- a/css_fundamentals/shoe_store/style.css
+++ b/css_fundamentals/shoe_store/style.css
@@ -1,14 +1,23 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: sans-serif;
   line-height: 1.4;
 }
 
+.container {
+}
 /* article {
   border: solid;
 } */
 
 .product {
   border: 4px solid black;
+  width: 825px;
+  margin: 50px auto;
 }
 
 /* h2,
@@ -21,6 +30,7 @@ h3 {
   text-align: center;
   background-color: #d3d3d3;
   text-transform: uppercase;
+  padding: 15px;
 }
 
 /*Product information*/
@@ -42,6 +52,7 @@ h3 {
   font-size: 12px;
   text-transform: uppercase;
   color: #777;
+  margin-bottom: 20px;
 }
 
 .more-info:link,
@@ -59,12 +70,21 @@ h3 {
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
+  margin-bottom: 15px;
+  margin-top: 30px;
 }
 
 .details-list {
   list-style: square;
+  margin-left: 20px;
+}
+.details-list li {
+  margin-bottom: 10px;
 }
 
+.details-list li:last-child {
+  margin-bottom: 25px;
+}
 /*  BUTTON  */
 
 .cart {
@@ -74,6 +94,10 @@ h3 {
   font-size: 20px;
   text-transform: 20px;
   cursor: pointer;
+  width: 100%;
+  text-transform: uppercase;
+  padding: 15px;
+  border-top: 4px solid black;
 }
 
 .cart:hover {
