--- a/css_fundamentals/shoe_store/style.css
+++ b/css_fundamentals/shoe_store/style.css
@@ -18,6 +18,7 @@ body {
   border: 4px solid black;
   width: 825px;
   margin: 50px auto;
+  position: relative;
 }
 
 /* h2,
@@ -55,9 +56,25 @@ h3 {
   margin-bottom: 20px;
 }
 
+.sale {
+  background-color: red;
+  color: white;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 2px;
+  padding: 7px 15px;
+  display: inline-block;
+  position: absolute;
+  top: -17px;
+  left: -34px;
+}
+
 .more-info:link,
 .more-info:visited {
   color: black;
+  margin-bottom: 30px;
+  display: inline-block;
 }
 
 .more-info:hover,
@@ -103,4 +120,28 @@ h3 {
 .cart:hover {
   background-color: white;
   color: black;
+}
+
+.color {
+  background-color: black;
+  height: 22px;
+  width: 22px;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.color-blue {
+  background-color: blue;
+}
+.color-red {
+  background-color: red;
+}
+.color-yellow {
+  background-color: yellow;
+}
+.color-brown {
+  background-color: brown;
+}
+.color-green {
+  background-color: green;
 }
