--- a/layouts/css_grid/css-grid.html
+++ b/layouts/css_grid/css-grid.html
@@ -41,14 +41,18 @@
 
         /* CSS GRID */
         display: grid;
+        grid-template-columns: 200px 200px 150px 150px;
+        grid-template-rows: 300px 200px;
+        column-gap: 30px;
+        row-gap: 60px;
         /* grid-template-columns: 1fr 1fr 1fr auto; */
         /* grid-template-rows: 300px 200px; */
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 1f 1f;
+        /* grid-template-columns: repeat(4, 1fr); */
+        /* grid-template-rows: 1f 1f; */
         /* height: 500px; */
         /* gap: 30px; */
-        column-gap: 20px;
-        row-gap: 40px;
+        /* column-gap: 20px; */
+        /* row-gap: 40px; */
       }
 
       .container--2 {
