--- a/layouts/css_grid/css-grid.html
+++ b/layouts/css_grid/css-grid.html
@@ -33,6 +33,7 @@
       }
 
       .container--1 {
+        display: none;
         /* STARTER */
         font-family: sans-serif;
         background-color: #ddd;
@@ -41,9 +42,11 @@
 
         /* CSS GRID */
         display: grid;
-        grid-template-columns: 200px 200px 150px 150px;
-        grid-template-rows: 300px 200px;
-        column-gap: 30px;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr 1fr;
+        height: 500px;
+        /* grid-template-rows: 300px 200px; */
+        column-gap: 20px;
         row-gap: 60px;
         /* grid-template-columns: 1fr 1fr 1fr auto; */
         /* grid-template-rows: 300px 200px; */
@@ -53,20 +56,55 @@
         /* gap: 30px; */
         /* column-gap: 20px; */
         /* row-gap: 40px; */
+        display: none;
+      }
+      .el--8 {
+        grid-column: 2 / 3;
+        /* grid-row: 1 / 3; */
+        grid-row: 1 /2;
+      }
+      .el--2 {
+        /* grid-column: 1/ 2; */
+        /* grid-column: 1 / span 4; */
+        grid-column: 1 / -1;
+        grid-row: 2/3;
+      }
+
+      .el--6 {
+        /* grid-row: 3 / 6; */
       }
 
       .container--2 {
         /* STARTER */
-        display: none;
+
         font-family: sans-serif;
         background-color: black;
         font-size: 40px;
-        margin: 100px;
+        margin: 40px;
 
-        width: 1000px;
+        width: 700px;
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
+        gap: 50px;
+
+        /* Aligning tracks inside container:
+        distribute empty space */
+        justify-content: center;
+        /* justify-content: space-between; */
+        align-content: center;
+        /* Aligning items INSIDE cells: moving items 
+        around insdie cells */
+        align-items: end;
+        justify-items: end;
+      }
+
+      .el--3 {
+        align-self: center;
+        justify-self: center;
       }
     </style>
   </head>
