--- a/web_design_rules_and_framework/style.css
+++ b/web_design_rules_and_framework/style.css
@@ -16,7 +16,7 @@ FONT SIZE SYSTEM (px)
 /* GENERAL STYLES */
 /* ------------------------ */
 body {
-  font-family: sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .container {
@@ -31,6 +31,8 @@ section {
 
 h2 {
   margin-bottom: 48px;
+  /* 36 / 44 / 52  */
+  font-size: 36px;
 }
 
 .grid-3-cols {
@@ -49,6 +51,7 @@ header {
   grid-template-columns: repeat(2, 1fr);
   column-gap: 80px;
   margin-top: 48px;
+  letter-spacing: -0.5;
 }
 
 .header-text-box {
@@ -57,10 +60,16 @@ header {
 
 h1 {
   margin-bottom: 24px;
+  /*44 / 52 / 62*/
+  font-size: 44px;
+  line-height: 1.1;
+  letter-spacing: -1;
 }
 
 .header-text {
   margin-bottom: 24px;
+  font-size: 18px;
+  line-height: 1.7;
 }
 
 img {
@@ -73,9 +82,12 @@ img {
 
 .features-title {
   margin-bottom: 16px;
+  font-size: 20px;
 }
 
 .features-text {
+  font-size: 18px;
+  line-height: 1.7;
 }
 
 /* TESTIMONIAL */
@@ -89,11 +101,14 @@ img {
 
 .testimonial-box h2 {
   margin-bottom: 24px;
+  font-size: 24px;
 }
 
 .testimonial-text {
   font-style: italic;
   margin-bottom: 24px;
+  font-size: 18px;
+  line-height: 1.7;
 }
 
 /* CHAIRS */
@@ -103,6 +118,7 @@ img {
 
 h3 {
   margin-bottom: 24px;
+  font-size: 20px;
 }
 
 .chair-details {
@@ -127,8 +143,10 @@ h3 {
 .chair-price {
   display: flex;
   justify-content: space-between;
+  font-size: 20px;
 }
 
 footer {
   margin-bottom: 48px;
+  font-size: 14px;
 }
