--- a/web_design_rules_and_framework/style.css
+++ b/web_design_rules_and_framework/style.css
@@ -108,6 +108,7 @@ img {
   background-color: #087f5b;
   color: #fff;
   padding: 24px;
+  border-radius: 12px;
 }
 
 .testimonial-box {
@@ -130,6 +131,12 @@ img {
 /* CHAIRS */
 .chair {
   box-shadow: 0px 20px 30px 0 rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+}
+
+.chair img {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 .chair-box {
   padding: 24px;
@@ -182,7 +189,9 @@ h3 {
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 500;
+
   display: inline-block;
+  border-radius: 100px;
 }
 
 .btn:hover,
@@ -198,6 +207,10 @@ h3 {
 .btn--small {
   font-size: 14px;
   padding: 8px 12px;
+}
+
+img {
+  border-radius: 12px;
 }
 
 footer {
