--- a/components_and_layout_patterns/components/accordian.html
+++ b/components_and_layout_patterns/components/accordian.html
@@ -36,14 +36,28 @@
       .accordian {
         width: 700px;
         margin: 100px auto;
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
       }
       .item {
+        box-shadow: 0 0 32px rgba(0, 0, 0, 0.1);
+        padding: 24px;
+        display: grid;
+        grid-template-columns: auto 1fr auto;
+        column-gap: 24px;
+        row-gap: 32px;
+        align-items: center;
       }
       .number,
       .text {
         font-size: 24px;
         font-weight: 500;
-        color: #087f5b;
+        /* color: #087f5b; */
+      }
+
+      .number {
+        color: #ced4ca;
       }
 
       .icon {
@@ -52,6 +66,8 @@
         stroke: #087f5b;
       }
       .hidden-box {
+        grid-column: 2;
+        display: none;
       }
       .hidden-box p {
         line-height: 1.6;
@@ -64,11 +80,55 @@
         flex-direction: column;
         gap: 12px;
       }
+
+      .open {
+        border-top: 4px solid #087f5b;
+      }
+
+      .open .hidden-box {
+        display: block;
+      }
+
+      .open .number,
+      .open .text {
+        color: #087f5b;
+      }
     </style>
   </head>
   <body>
     <div class="accordian">
       <div class="item">
+        <p class="number">01</p>
+        <p class="text">Where are these chairs assembled?</p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="icon"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="m19.5 8.25-7.5 7.5-7.5-7.5"
+          />
+        </svg>
+        <div class="hidden-box">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li>Nobis temporibus adipisci fugiat magnam sit tempore nemo</li>
+            <li>
+              voluptatem eos iure officia, neque vel perspiciatis illo,
+              blanditiis
+            </li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="item open">
         <p class="number">02</p>
         <p class="text">How long do I have to return my chair?</p>
         <svg
@@ -86,21 +146,43 @@
           />
         </svg>
         <div class="hidden-box">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui nulla,
-            debitis id in maxime, explicabo iure repudiandae eum commodi quas
-            similique eos officia facere, ipsum laboriosam expedita animi fuga
-            impedit?
-          </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
           <ul>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>
-              Nobis temporibus adipisci fugiat magnam sit tempore nemo ratione
-              dolore
-            </li>
+            <li>Nobis temporibus adipisci fugiat magnam sit tempore nemo</li>
             <li>
               voluptatem eos iure officia, neque vel perspiciatis illo,
-              blanditiis animi veniam eveniet!
+              blanditiis
+            </li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="item">
+        <p class="number">03</p>
+        <p class="text">Do you ship to countries outside the EU?</p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="icon"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="m19.5 8.25-7.5 7.5-7.5-7.5"
+          />
+        </svg>
+        <div class="hidden-box">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li>Nobis temporibus adipisci fugiat magnam sit tempore nemo</li>
+            <li>
+              voluptatem eos iure officia, neque vel perspiciatis illo,
+              blanditiis
             </li>
             <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
           </ul>
