--- a/components_and_layout_patterns/components/carousel/carousel.html
+++ b/components_and_layout_patterns/components/carousel/carousel.html
@@ -36,12 +36,16 @@
         width: 800px;
         margin: 100px auto;
         background-color: #087f5b;
-        padding: 32px;
+        /* padding: 32px;
         padding-left: 86px;
+        padding-right: 48px; */
+        padding: 32px 48px 32px 86px;
+
         border-radius: 8px;
+        position: relative;
 
         display: flex;
-        align-items: center;
+        /* align-items: center; */
         gap: 86px;
       }
       img {
@@ -65,6 +69,58 @@
         font-size: 12px;
         color: #c3fae8;
       }
+      /* CONTROLS */
+      .btn {
+        background-color: #fff;
+        border: none;
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+        position: absolute;
+        top: 50%;
+        box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
+        cursor: pointer;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .btn--left {
+        /* In relation to PARENT ELEMENT */
+        left: 0;
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
+      .btn--right {
+        right: 0;
+        top: 50%;
+        transform: translate(50%, -50%);
+      }
+      .btn-icon {
+        height: 24px;
+        width: 24px;
+        stroke: #087f5b;
+      }
+      .dots {
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        transform: translate(-50%, 32px);
+
+        display: flex;
+        gap: 12px;
+      }
+      .dot {
+        height: 12px;
+        width: 12px;
+        background-color: #fff;
+        border: 2px solid #087f5b;
+        border-radius: 50%;
+        cursor: pointer;
+      }
+      .dot--fill {
+        background-color: #087f5b;
+      }
     </style>
   </head>
   <body>
@@ -80,7 +136,7 @@
         <p class="testimonial-job">Senior Product Manager at EDP Comercial</p>
       </blockquote>
 
-      <button class="btn">
+      <button class="btn btn--left">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -96,7 +152,7 @@
           />
         </svg>
       </button>
-      <button class="btn">
+      <button class="btn btn--right">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -112,6 +168,12 @@
           />
         </svg>
       </button>
+      <div class="dots">
+        <button class="dot dot--fill">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+      </div>
     </div>
   </body>
 </html>
