--- a/components_and_layout_patterns/components/hero_section/hero.html
+++ b/components_and_layout_patterns/components/hero_section/hero.html
@@ -22,8 +22,16 @@
         color: #444;
       }
       header {
-        background-color: orangered;
+        /* background-color: orangered; */
         height: 100vh;
+        position: relative;
+        background-image: linear-gradient(
+            rgba(34, 34, 34, 0.6),
+            rgba(34, 34, 34, 0.6)
+          ),
+          url(hero.jpg);
+        background-size: cover;
+        color: #fff;
       }
       .container {
         margin: 0 auto;
@@ -34,11 +42,29 @@
         font-weight: 700;
         display: flex;
         justify-content: space-between;
-        background-color: green;
+        padding-top: 32px;
+        /* background-image: linear-gradient(to right, red, blue); */
+        /* background-color: green; */
+      }
+      .header-container {
+        width: 1200px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+
+        /* In relation to PARENT size */
+        transform: translate(-50%, -50%);
+
+        /* background-color: violet; */
+      }
+      .header-container-inner {
+        width: 50%;
+        /* background-color: blue; */
       }
       h1 {
         font-size: 52px;
         margin-bottom: 32px;
+        line-height: 1.05;
       }
       p {
         font-size: 20px;
@@ -73,14 +99,16 @@
         <div>LOGO</div>
         <div>NAVIGATION</div>
       </nav>
-      <div class="container">
-        <h1>A healthy meal delivered to your door, every single day</h1>
-        <p>
-          The smart 365-days-per-year food subscription that will make you eat
-          healthy again. Tailored towards your personal tastes and nutritional
-          needs
-        </p>
-        <a href="#" class="btn">Start eating well</a>
+      <div class="header-container">
+        <div class="header-container-inner">
+          <h1>A healthy meal delivered to your door, every single day</h1>
+          <p>
+            The smart 365-days-per-year food subscription that will make you eat
+            healthy again. Tailored towards your personal tastes and nutritional
+            needs
+          </p>
+          <a href="#" class="btn">Start eating well</a>
+        </div>
       </div>
     </header>
     <section>
