--- a/omnifood_project/css/style.css
+++ b/omnifood_project/css/style.css
@@ -40,9 +40,28 @@ SPACING SYSTEM (px)
   box-sizing: border-box;
 }
 
+html {
+  /* font-size: 10px; */
+  /* 10px / 16px = 0.625 = 62.5% */
+  /* Percentage of user's browser font-size setting */
+  font-size: 62.5%;
+}
+
 body {
   font-family: sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
+}
+
+.test {
+  width: 1000px;
+  background-color: red;
+  /* padding: 100px; */
+  /* max-width: 1000px; */
+  max-width: 50rem;
+  padding: 4rem;
+  font-size: 2rem;
+  color: #fff;
+  /*1 rem = 16px -> 50rem = 800px */
 }
