started building the hero section

--- a/omnifood_project/css/style.css
+++ b/omnifood_project/css/style.css
@@ -54,14 +54,13 @@ body {
   color: #555;
 }
 
-.test {
-  width: 1000px;
-  background-color: red;
-  /* padding: 100px; */
-  /* max-width: 1000px; */
-  max-width: 50rem;
-  padding: 4rem;
-  font-size: 2rem;
-  color: #fff;
-  /*1 rem = 16px -> 50rem = 800px */
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.hero-img {
+  width: 100%;
 }
