--- a/omnifood_project/css/style.css
+++ b/omnifood_project/css/style.css
@@ -7,10 +7,14 @@ FONT SIZE SYSTEM (px)
 
 - FONT WEIGHTS:
 Default: 400
+Medium: 500
+Semi-bold: 600
+bold: 700
 
 - LINE HEIGHTS
 Default: 1
-
+Small: 1.05
+Paragraph default: 1.6
 
 
 ---- 02 COLOR
@@ -26,6 +30,8 @@ Primary: #e67e22
 ---- 05 SHADOWS 
 
 ---- 06 BORDER-RADIUS
+
+Default: 9px
 
 
 ---- 07 WHITESPACE
@@ -126,6 +132,40 @@ body {
 
 .logo {
   height: 2.2rem;
+}
+
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+}
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #cf711f;
 }
 /***************************/
 /* HERO SECTION */
