completed building the meals section part 2

--- a/omnifood_project/css/general.css
+++ b/omnifood_project/css/general.css
@@ -40,6 +40,7 @@ Primary: #e67e22
 ---- 06 BORDER-RADIUS
 
 Default: 9px
+Medium: 11px
 
 
 ---- 07 WHITESPACE
@@ -172,4 +173,8 @@ body {
 
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+strong {
+  font-weight: 500;
 }
