completed building a testimonial section part 2

--- a/omnifood_project/css/general.css
+++ b/omnifood_project/css/general.css
@@ -32,7 +32,10 @@ Primary: #e67e22
 
 - Shades: #cf711f
 - Accents: 
-- Greys: #555, #333
+- Greys: 
+#555,
+ #333,
+#6f6f6f (lightest grey allowed on #fdf2e9)
 
 
 ---- 05 SHADOWS 
