completed building the call to action section part 1

--- a/omnifood_project/css/general.css
+++ b/omnifood_project/css/general.css
@@ -28,6 +28,7 @@ Primary: #e67e22
 - Tints: 
 #fdf2e9
 #fae5d3
+#eb984e
 
 
 - Shades: #cf711f
@@ -39,6 +40,8 @@ Primary: #e67e22
 
 
 ---- 05 SHADOWS 
+
+box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
 
 ---- 06 BORDER-RADIUS
 
