--- a/omnifood_project/css/style.css
+++ b/omnifood_project/css/style.css
@@ -437,3 +437,38 @@
   font-size: 1.8rem;
   line-height: 1.8;
 }
+
+.section-pricing {
+  padding: 9.6rem 0;
+}
+
+/***************************/
+/* CTA SECTION */
+/***************************/
+.section-cta {
+  padding: 4.8rem 0 12.8rem;
+}
+.cta {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  /* background-color: #e67e22; */
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  border-radius: 11px;
+  background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
+  overflow: hidden;
+
+  /* temp */
+  height: 50rem;
+}
+.cta-text-box {
+}
+.cta-img-box {
+  background-image: linear-gradient(
+      to right bottom,
+      rgb(235, 152, 78, 0.3),
+      rgb(230, 126, 34, 0.3)
+    ),
+    url("../img/eating.jpg");
+  background-size: cover;
+  background-position: center;
+}
