--- a/omnifood_project/css/general.css
+++ b/omnifood_project/css/general.css
@@ -31,7 +31,9 @@ Primary: #e67e22
 #eb984e
 
 
-- Shades: #cf711f
+- Shades: 
+#cf711f
+#45260a
 - Accents: 
 - Greys: 
 #555,
@@ -144,7 +146,7 @@ body {
   margin-bottom: 1.6rem;
   letter-spacing: 0.75px;
 }
-
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -157,6 +159,11 @@ body {
 
   /* Put transition on original "state" */
   transition: all 0.3s;
+
+  /* Only necessary for .btn */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
 }
 
 .btn--full:link,
@@ -183,6 +190,19 @@ body {
   /* Trick to add border inside*/
   box-shadow: inset 0 0 0 3px #fff;
 }
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
+}
+
 .link:link,
 .link:visited {
   display: inline-block;
@@ -217,6 +237,13 @@ body {
   width: 3rem;
   height: 3rem;
   color: #e67e22;
+}
+
+*:focus {
+  outline: none;
+  /* outline: 4px dotted #e67e22;
+  outline-offset: 8px; */
+  box-shadow: 0 0 0 0.8rem rgba(230, 126, 34, 0.5);
 }
 
 /* HELPER/SETTINGS CLASSES*/
