completed building the footer section part II and finished the desktop version of the Omnifood project

--- a/omnifood_project/css/general.css
+++ b/omnifood_project/css/general.css
@@ -36,6 +36,8 @@ Primary: #e67e22
 #45260a
 - Accents: 
 - Greys: 
+#888
+#767676 (lightest grey allowed on #fff)
 #555,
  #333,
 #6f6f6f (lightest grey allowed on #fdf2e9)
