--- a/omnifood_project_responsive_web_design/css/general.css
+++ b/omnifood_project_responsive_web_design/css/general.css
@@ -14,7 +14,9 @@ bold: 700
 - LINE HEIGHTS
 Default: 1
 Small: 1.05
+Medium: 1.2
 Paragraph default: 1.6
+Large: 1.8
 
 - Letter spacing
 0.5px
@@ -236,6 +238,7 @@ body {
   display: flex;
   align-items: center;
   gap: 1.6rem;
+  line-height: 1.2;
 }
 
 .list-icon {
