--- a/omnifood_project_responsive_web_design/css/general.css
+++ b/omnifood_project_responsive_web_design/css/general.css
@@ -72,6 +72,7 @@ html {
   /* 10px / 16px = 0.625 = 62.5% */
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -79,6 +80,10 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+
+  /* Only works if there is nothing absolutely
+  positioned in relation to body */
+  overflow-x: hidden;
 }
 /***************************/
 /* GENERAL REUSABLE COMPONENTS */
