--- a/omnifood_project_finishing_touches/css/queries.css
+++ b/omnifood_project_finishing_touches/css/queries.css
@@ -109,6 +109,7 @@ html font-size in media queries!*/
   /* MOBILE NAVIGATION */
   .btn-mobile-nav {
     display: block;
+    z-index: 1000;
   }
 
   .main-nav {
