implemented smooth scrolling

--- a/omnifood_project_finishing_touches/css/general.css
+++ b/omnifood_project_finishing_touches/css/general.css
@@ -73,6 +73,8 @@ html {
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
   overflow-x: hidden;
+  /*Does not work on Safari and Edge*/
+  /* scroll-behavior: smooth; */
 }
 
 body {
